# stepic

./: .clang_complete  .gitignore  CMakeLists.txt  Makefile  README.md  assignment.md  dataset.txt  dataset_12656_4.txt  main.cpp
assignment/: Makefile  main.cpp  msg.cpp  msg.h
assignment_src/: assignment.cpp
aux_test/: .clang_complete  Makefile  test.cpp
parallel/openmp/: Cursor.cpp  Cursor.h  FileCursor.cpp  FileCursor.h  Makefile  auxsort.h  main.cpp
serial/: .clang_complete  Cursor.cpp  Cursor.h  FileCursor.cpp  FileCursor.h  ICursor.h  Makefile  auxsort.cpp  main.cpp  mergesort.cpp  mergesort.h
src/: Makefile  assignment.cpp  main.cpp  options.cpp  options.h  server.cpp  server.h  unique_fd.cpp  unique_fd.h
test_src/: Makefile  test.cpp
